k3s/apps/pet-clinic/pet-clinic.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: default
  labels:
    app: petclinic
    service: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
        service: petclinic
    spec:
      # dnsPolicy: ClusterFirstWithHostNet
      ###################### Shared volume and init container ##########################
      volumes:
        - name: elastic-apm-agent
          emptyDir: {}
      containers:
        - name: petclinic
          image: springcommunity/spring-petclinic-rest:3.2.1
          ######################### Volume path and agent config ###########################
          volumeMounts:
            - mountPath: /elastic/apm/agent
              name: elastic-apm-agent
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: default
  labels:
    app: petclinic
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 9966
      port: 80
  selector:
    service: petclinic

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port:
                  number: 80
